finalização do swagger e uma rota adicionada local/:id/maps que antes estava junto com a outra
