# src/routes/doc.swagger.json
@@ -21,38 +21,54 @@
   "paths": {
     "/local/": {
       "post": {
+        "tags": [
+          "Local"
+        ],
+        "summary": "Cadastrar um novo local.",
         "description": "",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
+            "description": "Token de autenticação do usuário",
+            "required": true,
             "type": "string"
           },
           {
             "name": "body",
             "in": "body",
+            "description": "Dados do novo local",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nome": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Nome do local"
                 },
                 "descricao": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Descrição do local"
                 },
                 "cep": {
-                  "example": "any"
-                },
-                "localidade": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "88066000"
                 }
-              }
+              },
+              "required": [
+                "nome",
+                "descricao",
+                "cep"
+              ]
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/Local"
+            }
           },
           "400": {
             "description": "Bad Request"
@@ -63,14 +79,24 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       },
       "get": {
+        "tags": [
+          "Local"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
+            "description": "Token de autenticação do usuário",
+            "required": true,
             "type": "string"
           }
         ],
@@ -89,96 +115,172 @@
     },
     "/local/{id}": {
       "get": {
+        "tags": [
+          "Local"
+        ],
+        "summary": "Buscar informações de um local específico.",
         "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "integer",
+            "description": "ID do local a ser buscado"
           },
           {
             "name": "authorization",
             "in": "header",
+            "description": "Token de autenticação do usuário",
+            "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Local"
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Local não encontrado"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Não foi possível buscar o local"
           }
-        }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       },
       "delete": {
+        "tags": [
+          "Local"
+        ],
+        "summary": "Deletar um local existente.",
         "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "integer",
+            "description": "ID do local a ser deletado"
           },
           {
             "name": "authorization",
             "in": "header",
+            "description": "Token de autenticação do usuário",
+            "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Local deletado com sucesso"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Local não encontrado"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Não foi possível deletar o local"
           }
-        }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       },
       "put": {
+        "tags": [
+          "Local"
+        ],
+        "summary": "Atualizar um local existente.",
         "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "integer",
+            "description": "ID do local a ser atualizado"
           },
           {
             "name": "authorization",
             "in": "header",
+            "description": "Token de autenticação do usuário",
+            "required": true,
             "type": "string"
           },
           {
             "name": "body",
             "in": "body",
+            "description": "Dados atualizados do local",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "nome": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Novo nome"
                 },
                 "descricao": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Nova descrição"
                 },
                 "cep": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "88066000"
                 },
                 "localidade": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Localidade atualizada do local"
                 }
               }
             }
@@ -186,47 +288,25 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Local"
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Local não encontrado",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
           },
           "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/usuario/": {
-      "post": {
-        "tags": [
-          "Usuario"
-        ],
-        "description": "",
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Usuario"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
           }
         },
         "security": [
@@ -236,75 +316,71 @@
         ]
       }
     },
-    "/usuario/{id}": {
+    "/local/{id}/maps": {
       "get": {
+        "tags": [
+          "Local"
+        ],
+        "summary": "Buscar mapa de um local específico",
         "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "integer",
+            "description": "ID do local a ser buscado"
           },
           {
             "name": "authorization",
             "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/usuario/{email}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "email",
-            "in": "path",
+            "description": "Token de autenticação do usuário",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Local"
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
           "404": {
-            "description": "Not Found"
+            "description": "Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Local não encontrado"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Não foi possível buscar o local"
           }
-        }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
-    "/login/": {
+    "/usuario/": {
       "post": {
+        "tags": [
+          "Usuário"
+        ],
+        "summary": "Cadastrar um novo usuário.",
         "description": "",
         "parameters": [
           {
@@ -318,17 +394,94 @@
                 },
                 "password": {
                   "example": "any"
+                },
+                "nome": {
+                  "example": "any"
+                },
+                "data_nascimento": {
+                  "example": "any"
+                },
+                "cep": {
+                  "example": "any"
+                },
+                "cpf": {
+                  "example": "any"
+                },
+                "sexo": {
+                  "example": "any"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created",
+            "schema": {
+              "$ref": "#/definitions/Usuario"
+            }
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Usuário"
+        ],
+        "summary": "Fora do escopo inicial, mantive para testes",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/usuario/{id}": {
+      "get": {
+        "tags": [
+          "Usuário"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -336,15 +489,127 @@
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
       }
     },
-    "/login/bem_vindo": {
-      "get": {
+    "/usuario/{email}": {
+      "delete": {
+        "tags": [
+          "Usuário"
+        ],
+        "summary": "Deletar um usuário.",
         "description": "",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Email do usuário a ser deletado"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "description": "Token de autenticação do usuário",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Usuário deletado com sucesso"
+          },
+          "400": {
+            "description": "Erro ao deletar"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Usuário não encontrado"
+          },
+          "500": {
+            "description": "Não foi possível deletar o usuário"
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/login/": {
+      "post": {
+        "tags": [
+          "1º - Login (pegue o token)"
+        ],
+        "summary": "Realizar login de usuário.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Dados de login do usuário",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "josekunz@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "zebra"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "object"
+                },
+                "properties": {
+                  "type": "object",
+                  "properties": {
+                    "Token": {
+                      "type": "object",
+                      "properties": {
+                        "type": {
+                          "type": "string",
+                          "example": "string"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Os campos são obrigatórios"
+          },
+          "404": {
+            "description": "Não localizamos registro com estes dados!"
+          },
+          "500": {
+            "description": "Poxa.. algo deu errado!"
           }
         }
       }
