# src/routes/login.route.js
@@ -5,8 +5,4 @@ const loginRoutes = new Router()
 
 loginRoutes.post('/', LoginController.login)
 
-loginRoutes.get('/bem_vindo', (req, res) => {
-    res.json({ name: 'Bem vindo' })
-})
-
 module.exports = loginRoutes
